--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "dev": "vite",
+    "serve": "vite --host",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint './src/**/*.{js,ts,tsx,vue,md}'",
     "lint:fix": "eslint './src/**/*.{js,ts,tsx,vue,md}' --fix",
     "format": "pretty-quick --staged --ignore-path .gitignore"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.8",
+    "@vue/composition-api": "^1.1.5",
     "@vueuse/core": "^4.9.1",
     "core-js": "^3.11.1",
     "element-ui": "^2.15.5",
@@ -42,18 +43,20 @@
     "typescript": "^4.3.5",
     "unplugin-vue-components": "^0.14.11",
     "unplugin-vue2-script-setup": "^0.4.2",
-    "vite": "^2.2.3",
+    "vite": "^2.5.6",
     "vite-plugin-inspect": "^0.2.2",
     "vite-plugin-optimize-persist": "^0.0.5",
     "vite-plugin-package-config": "^0.0.3",
     "vite-plugin-pages": "^0.17.4",
     "vite-plugin-style-import": "^1.1.1",
     "vite-plugin-vue-layouts": "^0.3.1",
-    "vite-plugin-vue2": "^1.4.4",
-    "vite-plugin-windicss": "^1.2.7",
+    "vite-plugin-vue2": "^1.8.2",
     "vue-demi": "^0.7.5",
     "vue-template-compiler": "^2.6.14",
-    "windicss": "^3.1.7"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2",
+    "postcss": "^7",
+    "postcss-import": "^14.0.0",
+    "autoprefixer": "^9"
   },
   "lint-staged": {
     "**/**.{js,json,vue,ts}": [
